# xcsh

./: .checkov.yaml  .clang-format-ignore  .codespellrc  .editorconfig  .gitignore  .isort.cfg  .jscpd.json  .mypy.ini  .pre-commit-config.yaml  .python-lint  .ruff.toml  .shellcheckrc  .textlintrc  AGENTS.md  AUTHENTICATION-FEASABILITY-STUDY.md  AUTHENTICATION-SOFTWARE-DESIGN.md  AUTHENTICATION-SOFTWARE-REQUIREMENTS-SPECIFICATION.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  HANDOFF_FUNCTION_CALLS.md  MISSED_ITEMS.md  README.md  STAGES.md  package.json  ruff.toml  turbo.json  zizmor.yaml
.claude/: governance.json
.githooks/: pre-commit
.github/: SECURITY.md
assets/: banner.html
crates/tree-sitter-glimmer/: Cargo.toml  build.rs
crates/tree-sitter-glimmer/src/: lib.rs
docs/: custom-tools.md  environment-variables.md  extensions.md  gemini-manifest-extensions.md  hooks.md  index.md  marketplace.md  mcp-config.md  mcp-server-tool-authoring.md  models.md  natives-addon-loader-runtime.md  natives-architecture.md  natives-binding-contract.md  natives-build-release-debugging.md  natives-shell-pty-process.md  natives-text-search-pipeline.md  notebook-tool-runtime.md  plugin-manager-installer-plumbing.md  porting-from-pi-mono.md  provider-streaming-internals.md  resolve-tool-runtime.md  rulebook-matching-pipeline.md  sdk.md  secrets.md  session-operations-export-share-fork-resume.md  session-switching-and-recent-listing.md  session.md  skills.md  slash-command-internals.md  task-agent-discovery.md  theme.md  tui.md
scripts/: analyze_small_edits.py  (+13 more)
(+96 files in other folders)
